--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
+    "gatsby-cli": "^2.5.9",
     "prettier": "^1.16.4"
   },
   "keywords": [
@@ -27,6 +28,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
+    "build:ci": "node_modules/.bin/gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
