--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,71 +1,15 @@
-defaults: &defaults
-  docker:
-    - image: circleci/node:11
+# Use the latest 2.1 version of CircleCI pipeline processing engine, see https://circleci.com/docs/2.0/configuration-reference/
+version: 2.1
 
-version: 2
-jobs:
-  pre-build:
-    working_directory: ~/gatsbyBlog
-    <<: *defaults
-    steps:
-      - checkout:
-          path: ~/gatsbyBlog/
-      - attach_workspace:
-          at: ~/gatsbyBlog/
+# Use a package of configuration called an orb, see https://circleci.com/docs/2.0/orb-intro/
+orbs:
+  # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@0.3.1
 
-      - restore_cache:
-          key: node-v2-{{ checksum "package.json" }}-{{ arch }}
-
-      - run: npm install
-
-      - save_cache:
-          key: node-v2-{{ checksum "package.json" }}-{{ arch }}
-          paths:
-            - node_modules
-
-      - persist_to_workspace:
-          root: ~/gatsbyBlog
-          paths:
-            - node_modules
-  lint:
-    working_directory: ~/gatsbyBlog
-    <<: *defaults
-    steps:
-      - checkout
-      - attach_workspace:
-          at: ~/gatsbyBlog
-      - run: npm run lint
-
-  gatsby-deploy:
-    working_directory: ~/gatsbyBlog
-    <<: *defaults
-    steps:
-      - checkout:
-          path: ~/gatsbyBlog/
-      - attach_workspace:
-          at: ~/gatsbyBlog
-      - run:
-          command: |
-            sudo apt-get -y -qq install awscli
-            CI=false npm run build:ci
-            aws s3 sync public/ s3://gatsby-ci-demo  --region ap-southeast-2 --delete
-
+# Orchestrate or schedule a set of jobs, see https://circleci.com/docs/2.0/workflows/
 workflows:
-  version: 2
-  front-backend:
+  # Name the workflow "Welcome"
+  Welcome:
+    # Run the welcome/run job in its own container
     jobs:
-      - pre-build:
-          filters:
-            branches:
-              only:
-                - master
-      - lint:
-          requires:
-            - pre-build
-      - gatsby-deploy:
-          requires:
-            - lint
-          filters:
-            branches:
-              only:
-                - master
+      - welcome/run
